--- a/index.html
+++ b/index.html
@@ -1,254 +1,89 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dream Explorer - Hackathon 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      transition: background 0.6s ease;
-      color: #fff;
-      padding: 2rem;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 1rem;
-      font-size: 2.5rem;
-      text-shadow: 2px 2px 5px #000;
-    }
-    .continent-selector {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
-    }
-    .continent {
-      background: rgba(255,255,255,0.2);
-      border-radius: 1.5rem;
-      padding: 0.7rem 1.5rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-    .continent:hover {
-      background: #fff;
-      color: #764ba2;
-    }
-    .dropdown {
-      display: none;
-      margin-top: 1rem;
-      text-align: center;
-    }
-    .dropdown.active {
-      display: block;
-      animation: fadeIn 0.5s ease;
-    }
-    .country-btn {
-      margin: 0.5rem;
-      padding: 0.5rem 1rem;
-      border-radius: 10px;
-      background: rgba(255,255,255,0.2);
-      border: none;
-      color: #fff;
-      font-weight: 500;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .country-btn:hover {
-      background: #fff;
-      color: #764ba2;
-    }
-    .places-container {
-      margin-top: 2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-    }
-    .place-card {
-      background: rgba(255,255,255,0.15);
-      padding: 1rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      transition: transform 0.3s;
-    }
-    .place-card:hover {
-      transform: translateY(-5px);
-    }
-    .place-card h3 {
-      margin-bottom: 0.5rem;
-      font-size: 1.2rem;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Explore Destinations 🌍</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');body { margin: 0; background: linear-gradient(135deg, #f8f9fa, #e0e0e0); font-family: 'Poppins', sans-serif; color: #333; min-height: 100vh; display: flex; flex-direction: column; align-items: center; padding: 40px 20px; }
+
+h1 { font-weight: 700; margin-bottom: 10px; text-shadow: 2px 2px 10px rgba(0,0,0,0.1); }
+
+p.subtitle { font-weight: 400; margin-bottom: 30px; letter-spacing: 1.2px; color: #666; }
+
+.filter-buttons { display: flex; gap: 12px; margin-bottom: 40px; flex-wrap: wrap; justify-content: center; }
+
+button { background: #ffffff; border: 2px solid #ccc; padding: 10px 20px; border-radius: 30px; font-weight: 600; font-size: 14px; color: #333; cursor: pointer; transition: all 0.3s ease; }
+
+button:hover, button.active { background: #007bff; color: #fff; border-color: #007bff; transform: scale(1.05); }
+
+.destination-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 24px; width: 100%; max-width: 1000px; }
+
+.card { background: #ffffff; border-radius: 15px; padding: 20px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); transition: transform 0.3s, box-shadow 0.3s; display: flex; flex-direction: column; align-items: center; text-align: center; }
+
+.card:hover { transform: translateY(-8px); box-shadow: 0 12px 30px rgba(0,0,0,0.2); }
+
+.card img { width: 100%; max-width: 220px; height: 140px; border-radius: 10px; object-fit: cover; margin-bottom: 15px; }
+
+.card h3 { margin: 0 0 10px; font-weight: 700; font-size: 1.2rem; }
+
+.card p { margin: 0; color: #555; font-size: 0.9rem; line-height: 1.4; }
+
+footer { margin-top: 50px; font-size: 0.8rem; color: #888; } </style>
+
 </head>
-<body>  <h1>Explore Your Dream Destinations</h1>  <div class="continent-selector">
-    <div class="continent" onclick="showCountries('asia')">Asia 🌏</div>
-    <div class="continent" onclick="showCountries('europe')">Europe 🌍</div>
-    <div class="continent" onclick="showCountries('america')">America 🌎</div>
-    <div class="continent" onclick="showCountries('africa')">Africa 🐘</div>
-    <div class="continent" onclick="showCountries('oceania')">Oceania 🌊</div>
-    <div class="continent" onclick="showCountries('islands')">Islands 🏝️</div>
-  </div>  <div class="dropdown" id="countryDropdown"></div>
-  <div class="places-container" id="placesContainer"></div>  <script>
-    const countryData = {
-      asia: {
-        bg: 'linear-gradient(135deg, #FFA17F, #00223E)',
-        countries: {
-          india: {
-            bg: 'linear-gradient(135deg, #ff9966, #ff5e62)',
-            places: [
-              { name: "Jaipur", desc: "The Pink City with royal palaces." },
-              { name: "Goa", desc: "Sun-kissed beaches and vibrant culture." },
-              { name: "Varanasi", desc: "Spiritual center on the Ganges." }
-            ]
-          },
-          japan: {
-            bg: 'linear-gradient(135deg, #DAE2F8, #D6A4A4)',
-            places: [
-              { name: "Tokyo", desc: "Modern meets tradition." },
-              { name: "Kyoto", desc: "Temples and cherry blossoms." }
-            ]
-          }
-        }
-      },
-      europe: {
-        bg: 'linear-gradient(135deg, #00c6ff, #0072ff)',
-        countries: {
-          france: {
-            bg: 'linear-gradient(135deg, #E0C3FC, #8EC5FC)',
-            places: [
-              { name: "Paris", desc: "City of love and lights." },
-              { name: "Nice", desc: "Charming coastal town." }
-            ]
-          },
-          italy: {
-            bg: 'linear-gradient(135deg, #fdfbfb, #ebedee)',
-            places: [
-              { name: "Rome", desc: "The Eternal City." },
-              { name: "Venice", desc: "Floating city of canals." }
-            ]
-          }
-        }
-      },
-      america: {
-        bg: 'linear-gradient(135deg, #f7971e, #ffd200)',
-        countries: {
-          usa: {
-            bg: 'linear-gradient(135deg, #56CCF2, #2F80ED)',
-            places: [
-              { name: "New York", desc: "City that never sleeps." },
-              { name: "San Francisco", desc: "Golden Gate and tech hub." }
-            ]
-          },
-          brazil: {
-            bg: 'linear-gradient(135deg, #FBD3E9, #BB377D)',
-            places: [
-              { name: "Rio", desc: "Carnival and Christ the Redeemer." },
-              { name: "Sao Paulo", desc: "Brazil’s biggest city." }
-            ]
-          }
-        }
-      },
-      africa: {
-        bg: 'linear-gradient(135deg, #FFDEE9, #B5FFFC)',
-        countries: {
-          egypt: {
-            bg: 'linear-gradient(135deg, #ffe259, #ffa751)',
-            places: [
-              { name: "Cairo", desc: "City of pyramids and ancient history." },
-              { name: "Alexandria", desc: "Historic port city on the Mediterranean." }
-            ]
-          },
-          kenya: {
-            bg: 'linear-gradient(135deg, #11998e, #38ef7d)',
-            places: [
-              { name: "Nairobi", desc: "Capital city with wildlife parks." },
-              { name: "Mombasa", desc: "Coastal city with white sand beaches." }
-            ]
-          }
-        }
-      },
-      oceania: {
-        bg: 'linear-gradient(135deg, #43cea2, #185a9d)',
-        countries: {
-          australia: {
-            bg: 'linear-gradient(135deg, #fc4a1a, #f7b733)',
-            places: [
-              { name: "Sydney", desc: "Home to the Opera House." },
-              { name: "Melbourne", desc: "Cultural capital of Australia." }
-            ]
-          },
-          newzealand: {
-            bg: 'linear-gradient(135deg, #00bf8f, #001510)',
-            places: [
-              { name: "Auckland", desc: "Largest city in New Zealand." },
-              { name: "Queenstown", desc: "Adventure capital of the world." }
-            ]
-          }
-        }
-      },
-      islands: {
-        bg: 'linear-gradient(135deg, #fdfcfb, #e2d1c3)',
-        countries: {
-          maldives: {
-            bg: 'linear-gradient(135deg, #30cfd0, #330867)',
-            places: [
-              { name: "Male", desc: "Capital of Maldives." },
-              { name: "Maafushi", desc: "Island paradise for budget travelers." }
-            ]
-          },
-          seychelles: {
-            bg: 'linear-gradient(135deg, #ffecd2, #fcb69f)',
-            places: [
-              { name: "Victoria", desc: "Charming capital with Creole culture." },
-              { name: "La Digue", desc: "Idyllic island beaches and nature." }
-            ]
-          }
-        }
-      }
-    };
+<body><h1>Explore Destinations 🌎</h1>
+<p class="subtitle">Filter by region and find your next dream place!</p><div class="filter-buttons">
+  <button class="active" data-region="all">All Regions</button>
+  <button data-region="asia">Asia 🌏</button>
+  <button data-region="europe">Europe 🌍</button>
+  <button data-region="america">America 🌎</button>
+  <button data-region="africa">Africa 🌍</button>
+  <button data-region="oceania">Oceania 🌊</button>
+</div><div class="destination-list" id="destination-list">
+  <!-- Cards will be generated here -->
+</div><footer>Made with passion for Hackathon 2025</footer><script>
+  const destinations = [
+    { name: "Kyoto, Japan", region: "asia", desc: "Ancient temples, cherry blossoms, and traditional tea houses.", img: "https://source.unsplash.com/kyoto" },
+    { name: "Delhi, India", region: "asia", desc: "Bustling bazaars, historic forts, and rich culture.", img: "https://source.unsplash.com/delhi" },
+    { name: "Paris, France", region: "europe", desc: "Romantic streets, Eiffel Tower, and world-class art museums.", img: "https://source.unsplash.com/paris" },
+    { name: "New York, USA", region: "america", desc: "City that never sleeps, iconic skyline, and cultural melting pot.", img: "https://source.unsplash.com/new-york" },
+    { name: "Cape Town, South Africa", region: "africa", desc: "Breathtaking landscapes, Table Mountain, and wildlife.", img: "https://source.unsplash.com/cape-town" },
+    { name: "Sydney, Australia", region: "oceania", desc: "Famous Opera House, stunning beaches, and vibrant city life.", img: "https://source.unsplash.com/sydney" },
+    { name: "Bangkok, Thailand", region: "asia", desc: "Vibrant street markets, temples, and delicious food.", img: "https://source.unsplash.com/bangkok" },
+    { name: "Rome, Italy", region: "europe", desc: "Ancient ruins, rich history, and mouthwatering cuisine.", img: "https://source.unsplash.com/rome" },
+    { name: "Rio de Janeiro, Brazil", region: "america", desc: "Carnival, beaches, and lively culture.", img: "https://source.unsplash.com/rio" },
+    { name: "Marrakech, Morocco", region: "africa", desc: "Colorful souks, desert landscapes, and exotic flavors.", img: "https://source.unsplash.com/marrakech" },
+    { name: "Auckland, New Zealand", region: "oceania", desc: "Harbors, hiking trails, and Maori culture.", img: "https://source.unsplash.com/auckland" }
+  ];
 
-    function showCountries(continent) {
-      document.body.style.background = countryData[continent].bg;
-      const dropdown = document.getElementById('countryDropdown');
-      dropdown.innerHTML = '';
-      const countries = countryData[continent].countries;
-      for (let country in countries) {
-        const btn = document.createElement('button');
-        btn.className = 'country-btn';
-        btn.innerText = capitalize(country);
-        btn.onclick = () => showPlaces(continent, country);
-        dropdown.appendChild(btn);
-      }
-      dropdown.classList.add('active');
+  const listEl = document.getElementById('destination-list');
+  const buttons = document.querySelectorAll('.filter-buttons button');
+
+  function renderList(region) {
+    listEl.innerHTML = '';
+    const filtered = region === 'all' ? destinations : destinations.filter(d => d.region === region);
+
+    if (filtered.length === 0) {
+      listEl.innerHTML = '<p style="color:#555; font-style: italic;">No destinations found in this region.</p>';
+      return;
     }
 
-    function showPlaces(continent, country) {
-      document.body.style.background = countryData[continent].countries[country].bg;
-      const places = countryData[continent].countries[country].places;
-      const container = document.getElementById('placesContainer');
-      container.innerHTML = '';
-      places.forEach(place => {
-        const card = document.createElement('div');
-        card.className = 'place-card';
-        card.innerHTML = `<h3>${place.name}</h3><p>${place.desc}</p>`;
-        container.appendChild(card);
-      });
-    }
+    filtered.forEach(d => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `<img src="${d.img}" alt="${d.name}"><h3>${d.name}</h3><p>${d.desc}</p>`;
+      listEl.appendChild(card);
+    });
+  }
 
-    function capitalize(word) {
-      return word.charAt(0).toUpperCase() + word.slice(1);
-    }
-  </script></body>
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      buttons.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      renderList(btn.getAttribute('data-region'));
+    });
+  });
+
+  renderList('all');
+</script></body>
 </html>
